[metadata]
name = dataverse-access
url = https://github.com/Imageomics/dataverse-access
author = John Bradley
author_email = john.bradley@duke.edu
version = 0.0.1

[options]
install_requires =
    click
    pyDataverse
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    dva = dva.cli:main
